<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/myRecipesFragment"
        android:icon="@drawable/ic_heart"
        android:title="@string/nav_my_recipes" />

    <item
        android:id="@+id/apiRecipesFragment"
        android:icon="@drawable/ic_chef_hat"
        android:title="@string/nav_api_recipes" />

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/shoppingListFragment"
        android:icon="@drawable/ic_cart"
        android:title="@string/nav_shopping" />

    <item
        android:id="@+id/moreFragment"
        android:icon="@drawable/ic_more"
        android:title="@string/nav_more" />

</menu>